<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Dominik Szaradowski on 31.05.19 08:48
  ~ Copyright (c) 2019 . All rights reserved.
  ~ Website: https://www.szaradowski.pl
  -->

<resources>
    <string name="app_name">"How much "</string>
    <string name="accept">Accept</string>
    <string name="btn_add_receipt">New receipt</string>
    <string name="cancel">Cancel</string>
    <string name="charts">Charts</string>
    <string name="charts_last_6">Last 6 months</string>
    <string name="charts_sub">History of data and charts.</string>
    <string name="charts_title_receipt">Charts from %1$s to %2$s</string>
    <string name="charts_title_sum">Sum from %1$s to %2$s</string>
    <string name="day_sm_2">Mon</string>
    <string name="day_sm_3">"Tue "</string>
    <string name="day_sm_4">"Wed "</string>
    <string name="day_sm_5">"Thu "</string>
    <string name="day_sm_6">"Fri "</string>
    <string name="day_sm_7">Sat</string>
    <string name="day_sm_1">Sun</string>
    <string name="app_name_sub">Thoughtful shopping!</string>
    <string name="def_currency">USD</string>
    <string name="empty_product_title">Empty product!</string>
    <string name="empty_receipt_desc">Start shopping and add first receipt.</string>
    <string name="empty_receipt_title">Little empty here!</string>
    <string name="empty_product_desc">Add yours products to the receipt.</string>
    <string name="error_okcnt">Quantity or weight is incorrect</string>
    <string name="error_okname">Name is incorrect</string>
    <string name="error_okprice">Amount is incorrect</string>
    <string name="guide_add_receipt">Click here to add new receipt.</string>
    <string name="guide_list_receipt">Your receipts - product lists will appear here.</string>
    <string name="guide_next">NEXT</string>
    <string name="guide_understand">OK</string>
    <string name="item_product_subname">Quantity: %1$s</string>
    <string name="month_sm_1">JAN</string>
    <string name="month_sm_2">FEB</string>
    <string name="month_sm_3">MAR</string>
    <string name="month_sm_4">APR</string>
    <string name="month_sm_5">MAY</string>
    <string name="month_sm_6">JUN</string>
    <string name="month_sm_7">JUL</string>
    <string name="month_sm_8">AUG</string>
    <string name="month_sm_9">SEP</string>
    <string name="month_sm_10">OCT</string>
    <string name="month_sm_11">NOV</string>
    <string name="month_sm_12">DEC</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_chart_data">No data for the chart</string>
    <string name="ok">OK</string>
    <string name="permission_btn">Permissions</string>
    <string name="permission_text">This app requires the right permissions to work properly.</string>
    <string name="previous_product">A product with this name previously cost %1$s</string>
    <string name="product_cnt">Quantity or weight in kg/lb</string>
    <string name="product_dialog_ocr_title">Choose product name</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Price for unit (or weight)</string>
    <string name="product_title">Product card</string>
    <string name="product_type_0">"Other purchases "</string>
    <string name="product_type_1">Food</string>
    <string name="product_type_2">Technics</string>
    <string name="product_type_3">Services</string>
    <string name="product_type_4">Fuel</string>
    <string name="product_voice_question">Say product name.</string>
    <string name="products_menu_item1">Rename</string>
    <string name="products_menu_item2">Delete</string>
    <string name="receipt_change_date">Change the date</string>
    <string name="receipt_changename_dialog_title">Rename</string>
    <string name="receipt_def_name">Receipt #</string>
    <string name="receipt_list">Products list</string>
    <string name="receipt_photo_title">Take a photo</string>
    <string name="receipt_sub">You have %1$s items.</string>
    <string name="receipt_subname">"%1$d items for %2$s "</string>
    <string name="receipts">Receipts</string>
    <string name="remove_cancel_product">Remove / Cancel</string>
    <string name="save">Save</string>
    <string name="save_only_photo">Only photo</string>
    <string name="settings">Settings</string>
    <string name="settings_currency_title">Select the currency</string>
    <string name="settings_sub">Account and application settings.</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="type_product_cnt">Type the quantity or weight</string>
    <string name="type_product_name">Type the product name</string>
    <string name="type_product_price">Type price</string>
    <string name="update">Update</string>
    <string name="vision_notext">" Downloading Google Vision libraries. Text recognition will be temporarily unavailable."</string>
    <string name="vision_notext_storage">" Text recognition is not available, no space in the devices memory."</string>
    <string name="EUR_name">Euro</string>
    <string name="USD_name">U.S. Dollar</string>
    <string name="GBP_name">British pound sterling</string>
    <string name="PLN_name">Polish zloty</string>
    <string name="RUB_name">Russian ruble</string>
    <string name="CNY_name">Chinese yuan</string>
    <string name="currency">Currency</string>
</resources>