<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Dominik Szaradowski on 24.05.19 18:42
  ~ Copyright (c) 2019 . All rights reserved.
  ~ Website: https://www.szaradowski.pl
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">

    <ImageView
        android:id="@+id/ivMainBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/flLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_marginTop="0dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <pl.szaradowski.mycart.components.RichTextView
                android:id="@+id/tvLogoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="38sp"
                android:layout_marginStart="75dp"
                android:shadowColor="#000"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="1"
                app:textFont="Font-Bold"/>

            <pl.szaradowski.mycart.components.RichTextView
                android:id="@+id/tvLogoTextSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_sub"
                android:textAllCaps="true"
                android:textColor="#CCFFFFFF"
                android:textSize="20sp"
                android:layout_marginStart="76dp"
                android:layout_marginTop="41dp"
                android:shadowColor="#000"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="1"
                app:textFont="Font-Light"/>
        </FrameLayout>

        <pl.szaradowski.mycart.components.RichTextView
            android:id="@+id/tvPermText"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/permission_text"
            android:textColor="#fff"
            android:shadowColor="#000"
            android:shadowRadius="2"
            android:shadowDx="1"
            android:shadowDy="1"
            app:textFont="Font-Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <pl.szaradowski.mycart.components.RichButton
            android:layout_marginTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="#fff"
            android:text="@string/permission_btn"
            app:textFont="Font-Light"
            android:background="@drawable/circle_button_dark"
            android:id="@+id/btnPerm"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>
</FrameLayout>