<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Dominik Szaradowski on 23.05.19 10:43
  ~ Copyright (c) 2019 . All rights reserved.
  ~ Website: https://www.szaradowski.pl
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:orientation="vertical"
    android:background="@drawable/panel_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.szaradowski.mycart.components.RichTextView
        android:text="@string/charts"
        android:textSize="34sp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="20dp"
        app:textFont="Font-Regular"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <pl.szaradowski.mycart.components.RichTextView
        android:text="@string/charts_sub"
        android:textSize="18sp"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="22dp"
        app:textFont="Font-Light"
        android:textColor="#A1A0A8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <pl.szaradowski.mycart.components.RichTextView
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:text="@string/charts_last_6"
                        app:textFont="Font-Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.github.mikephil.charting.charts.HorizontalBarChart
                        android:layout_marginTop="10dp"
                        android:id="@+id/chLast6"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <pl.szaradowski.mycart.components.RichButton
                    android:layout_marginEnd="5dp"
                    android:textColor="#fff"
                    android:background="@drawable/circle_button_dark"
                    android:id="@+id/btnFrom"
                    android:layout_weight="1"
                    android:text="from"
                    app:textFont="Font-Light"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <pl.szaradowski.mycart.components.RichButton
                    android:layout_marginStart="5dp"
                    android:textColor="#fff"
                    android:background="@drawable/circle_button_dark"
                    android:id="@+id/btnTo"
                    android:layout_weight="1"
                    android:text="to"
                    app:textFont="Font-Light"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <pl.szaradowski.mycart.components.RichTextView
                        android:id="@+id/tvSumTitle"
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:text="@string/charts_title_sum"
                        app:textFont="Font-Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <pl.szaradowski.mycart.components.RichTextView
                        android:id="@+id/tvSum"
                        android:layout_marginTop="10dp"
                        android:textSize="30sp"
                        android:textColor="#D75A3B"
                        android:layout_gravity="center"
                        android:text="0,00 zł"
                        app:textFont="Font-Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <pl.szaradowski.mycart.components.RichTextView
                        android:id="@+id/tvReceiptTitle"
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:text="@string/charts_title_receipt"
                        app:textFont="Font-Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:layout_marginTop="10dp"
                        android:id="@+id/chReceipt"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>